--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,10 +1,6 @@
----
 name: Code Coverage
 
 on:
-  # NOTE: Both, the 'pull_request' and the 'push'
-  # events are REQUIRED to take full advantage
-  # of the features of this action.
   pull_request:
     branches:
       - main
@@ -21,33 +17,34 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Your logic to generate the Cobertura XML goes here
-        run: echo "Your logic to generate the Cobertura XML goes here"
+      - name: Install dependencies
+        run: npm install
+
+      - name: Generate Cobertura XML
+        run: |
+          # Install Istanbul globally (if not already installed)
+          npm install -g istanbul
+          # Run your tests with Istanbul to generate the Cobertura XML report
+          istanbul cover ./node_modules/.bin/jest --coverage --dir ./coverage --report cobertura
 
       - name: Produce the coverage report
         uses: insightsengineering/coverage-action@v2
         with:
           # Path to the Cobertura XML report.
-          path: ./cobertura.xml
-          # Minimum total coverage, if you want to the
-          # workflow to enforce it as a standard.
-          # This has no effect if the `fail` arg is set to `false`.
+          path: ./coverage/cobertura.xml
+          # Minimum total coverage, if you want to enforce it as a standard.
           threshold: 80.123
-          # Fail the workflow if the minimum code coverage
-          # reuqirements are not satisfied.
+          # Fail the workflow if the minimum code coverage requirements are not satisfied.
           fail: true
-          # Publish the rendered output as a PR comment
+          # Publish the rendered output as a PR comment.
           publish: true
           # Create a coverage diff report.
           diff: true
           # Branch to diff against.
-          # Compare the current coverage to the coverage
-          # determined on this branch.
+          # Compare the current coverage to the coverage determined on this branch.
           diff-branch: main
-          # This is where the coverage reports for the
-          # `diff-branch` are stored.
-          # Branch is created if it doesn't already exist'.
+          # This is where the coverage reports for the diff-branch are stored.
+          # Branch is created if it doesn't already exist.
           diff-storage: _xml_coverage_reports
-          # A custom title that can be added to the code
-          # coverage summary in the PR comment.
+          # A custom title that can be added to the code coverage summary in the PR comment.
           coverage-summary-title: "Code Coverage Summary"
