--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,50 +1,44 @@
-name: Code Coverage
+# A workflow for deploying the Unit Tests coverage report to GitHub Pages
+name: Deploy coverage report to Pages
 
 on:
-  pull_request:
-    branches:
-      - main
-  push:
-    branches:
-      - main
+   # Runs on pushes targeting the default branch
+   push:
+       branches: ['master']
+
+   # Allows you to run this workflow manually from the Actions tab
+   workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+   contents: read
+   pages: write
+   id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+   group: 'pages'
+   cancel-in-progress: true
 
 jobs:
-  coverage:
-    name: Calculate code coverage
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Generate Cobertura XML
-        run: |
-          # Install Istanbul globally (if not already installed)
-          npm install -g istanbul
-          # Run your tests with Istanbul to generate the Cobertura XML report
-          istanbul cover ./node_modules/.bin/jest --coverage --dir ./coverage --report cobertura
-
-      - name: Produce the coverage report
-        uses: insightsengineering/coverage-action@v2
-        with:
-          # Path to the Cobertura XML report.
-          path: ./coverage/cobertura.xml
-          # Minimum total coverage, if you want to enforce it as a standard.
-          threshold: 80.123
-          # Fail the workflow if the minimum code coverage requirements are not satisfied.
-          fail: true
-          # Publish the rendered output as a PR comment.
-          publish: true
-          # Create a coverage diff report.
-          diff: true
-          # Branch to diff against.
-          # Compare the current coverage to the coverage determined on this branch.
-          diff-branch: main
-          # This is where the coverage reports for the diff-branch are stored.
-          # Branch is created if it doesn't already exist.
-          diff-storage: _xml_coverage_reports
-          # A custom title that can be added to the code coverage summary in the PR comment.
-          coverage-summary-title: "Code Coverage Summary"
+   # Single deploy job since we're just deploying
+   deploy:
+       environment:
+           name: github-pages
+           url: ${{ steps.deployment.outputs.page_url }}
+       runs-on: ubuntu-latest
+       steps:
+           - name: Checkout
+             uses: actions/checkout@v3
+           - run: yarn
+           - run: yarn coverage:combined
+           - name: Setup Pages
+             uses: actions/configure-pages@v2
+           - name: Upload artifact
+             uses: actions/upload-pages-artifact@v1
+             with:
+                 # Upload the coverage directory from the repository
+                 path: './coverage/lcov-report'
+           - name: Deploy to GitHub Pages
+             id: deployment
+             uses: actions/deploy-pages@v1
