--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,14 +1,10 @@
-            - name: Coverage check
+            - name: LCOV Minimum test coverage checker
   # You may pin to the exact commit or the version.
-  # uses: devmasx/coverage-check-action@4a754f8957c6824e0a0d44bf9168fdbdf47e7e2f
-  uses: devmasx/coverage-check-action@v1.2.0
+  # uses: terencetcf/github-actions-lcov-minimum-coverage-checker@537e486d32b4763f3be8fbe81a79c3421071b190
+  uses: terencetcf/github-actions-lcov-minimum-coverage-checker@v1
   with:
-    # lcov | simplecov
-    type: # default is lcov
-    # Github token for create checks
-    token: 
-    # Minimum coverage
-    min_coverage: # optional, default is 80
-    # Json with coverage result
-    result_path: 
+    # File path of the test coverage file. e.g.: `coverage/lcov.info`
+    coverage-file: 
+    # The minimum test coverage threshold. Optional. Default: `80`
+    minimum-coverage: # optional, default is 80
           
