--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,9 +1,6 @@
-name: Continuous Integration
+on: push
 
-on:
-  push:
-    branches:
-      - main
+name: Continuous Integration
 
 jobs:
   unit_test:
