--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest",
-    "coverage":"yarn test --watchAll --coverage"
+    "coverage":"yarn test --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
