--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -24,17 +24,21 @@ jobs:
       - name: Run tests with coverage
         run: npm run coverage
 
-      - name: Check coverage
+        - name: Check coverage
         run: |
           if [ -f "coverage/lcov-report/index.html" ]; then
+            # Extract coverage percentages from HTML report
             coverage=$(grep -oP '(?<=<span class="strong">)([0-9]*[.]?[0-9]+)' coverage/lcov-report/index.html)
-            if (( $(echo "$coverage >= 80" | bc -l) )); then
+            # Convert coverage percentage to integer
+            coverage_int=${coverage%.*}
+            if [ "$coverage_int" -ge 80 ]; then
               echo "🎉 Test coverage is above 80% ($coverage%)!"
+              exit 0  # Success
             else
               echo "❌ Test coverage is below 80% ($coverage%). Please improve test coverage."
-              exit 1
+              exit 1  # Failure
             fi
           else
             echo "❌ Coverage report not found. Make sure your tests generate coverage reports."
-            exit 1
+            exit 1  # Failure
           fi
